# openpli-gls

./: README  configure.ac  skin.py
data/:  timezone.xml  Makefile.am
lib/gdi/: gfbdc.cpp  grc.cpp  grc.h
lib/gui/: ewidgetdesktop.cpp  ewindow.cpp
lib/python/: enigma_python.i
lib/python/Components/: VolumeControl.py  config.py
lib/python/Components/Converter/: MaggyStaticText.py  Makefile.am  MovieReference.py  ProgressDiskSpaceInfo.py  QuickEcmInfo.py  ServiceInfoEX.py
lib/python/Components/Renderer/: Makefile.am  PiconB.py  PiconProv.py  RollerCharLCD.py
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Screens/: About.py  ChannelSelection.py  InfoBarGenerics.py  Screen.py  Wizard.py
main/: bsod.cpp  enigma.cpp
