installdir = $(pkglibdir)/python/Components/Converter

install_PYTHON = \
	__init__.py ClockToText.py Converter.py EventName.py StaticText.py EventTime.py \
	Poll.py RemainingToText.py StringList.py ServiceName.py FrontendInfo.py ServiceInfo.py \
	ConditionalShowHide.py ServicePosition.py ValueRange.py RdsInfo.py Streaming.py \
	StaticMultiList.py ServiceTime.py MovieInfo.py MenuEntryCompare.py StringListSelection.py \
	ServiceOrbitalPosition.py CryptoInfo.py TextCase.py \
	ValueBitTest.py TunerInfo.py ConfigEntryTest.py TemplatedMultiContent.py ProgressToText.py \
	Combine.py SensorToText.py ValueToPixmap.py PliExtraInfo.py genre.py TransponderInfo.py \
	RotorPosition.py AC3DownMixStatus.py AlwaysTrue.py CaidInfo2.py CamdRAED.py \
	EventName2.py FanTempInfo.py MaggyEventName.py MaggyStaticText.py MovieReference.py \
	ProgressDiskSpaceInfo.py QuickEcmInfo.py ServiceInfoEX.py ServiceName2.py 

 









